adicionando mais coisas ao projeto

--- a/index.html
+++ b/index.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+<html lang="pr-br">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css'
+            rel='stylesheet'>
+        <link rel="stylesheet" href="./css/reset.css">
+        <link rel="stylesheet" href="./css/estilios.css">
+        <title>Pagina Inicial</title>
+    </head>
+    <body>
+        <section class="bloco-esquerdo">
+            <div class="bloco-esquerdo__logo-app"></div>
+            <div class="bloco-esquerdo__empresa">
+                <div class="bloco-esquerdo__empresa-bloco">
+                    <section class="bloco-esquerdo__empresa-logo__propietario">
+
+                    </section>
+                    <section class="bloco-esquerdo__titulo-subtitulo">
+                        <p
+                            class="bloco-esquerdo__titulo-subtitulo-titulo-empresa"></p>
+                        <p
+                            class="bloco-esquerdo__titulo-subtitulo-titulo-empresa-subtitulo"></p>
+
+                    </section>
+
+                </div>
+
+                <div class="bloco-esquerdo__empresa-bloco-configuracoes">
+
+                </div>
+
+            </div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </section>
+        <section class="bloco-principal"></section>
+
+    </body>
 </html>
