--- a/index.html
+++ b/index.html
@@ -1,47 +1,67 @@
 <!DOCTYPE html>
 <html lang="pr-br">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css'
-            rel='stylesheet'>
-        <link rel="stylesheet" href="./css/reset.css">
-        <link rel="stylesheet" href="./css/estilios.css">
-        <title>Pagina Inicial</title>
-    </head>
-    <body>
-        <section class="bloco-esquerdo">
-            <div class="bloco-esquerdo__logo-app"></div>
-            <div class="bloco-esquerdo__empresa">
-                <div class="bloco-esquerdo__empresa-bloco">
-                    <section class="bloco-esquerdo__empresa-logo__propietario">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css'
+      rel='stylesheet'>
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/estilios.css">
+    <title>Pagina Inicial</title>
+  </head>
+  <body>
+    <section class="bloco-esquerdo">
+      <div class="bloco-esquerdo__empresa">
+        <div class="bloco-esquerdo__empresa-bloco">
+          <div class="info-propietario">
+            <section class="bloco-esquerdo__empresa-logo__propietario">
+              <img src alt class="imagem-empresa">
 
-                    </section>
-                    <section class="bloco-esquerdo__titulo-subtitulo">
-                        <p
-                            class="bloco-esquerdo__titulo-subtitulo-titulo-empresa"></p>
-                        <p
-                            class="bloco-esquerdo__titulo-subtitulo-titulo-empresa-subtitulo"></p>
+            </section>
+            <section class="bloco-esquerdo__titulo-subtitulo">
+              <p
+                class="bloco-esquerdo__titulo-subtitulo-titulo-empresa">Reparo
+                de Celulares</p>
+              <p
+                class="bloco-esquerdo__titulo-subtitulo-titulo-empresa-subtitulo">Cleber</p>
 
-                    </section>
+            </section>
+          </div>
 
-                </div>
+        </div>
 
-                <div class="bloco-esquerdo__empresa-bloco-configuracoes">
+        <div class="bloco-esquerdo__empresa-bloco-configuracoes">
+          <ul class="bloco-esquerdo__empresa-bloco-configuracoes-lista">
+            <li class="bloco-esquerdo__empresa-bloco-configuracoes-item__lista">
+              <a href="" class="bloco-esquerdo__empresa-bloco-configuracoes__link">
+                <i class='bx bx-cog'></i>
+                <p>configuraçoes</p>
 
-                </div>
+              </a>
+            </li>
+            <li>
+              <a href>
+                <i class='bx bx-plus-circle'></i>
+                <p>configuraçoes</p>
 
-            </div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-        </section>
-        <section class="bloco-principal"></section>
+              </a>
+            </li>
+            
+          </ul>
 
-    </body>
+        </div>
+
+      </div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </section>
+    <section class="bloco-principal"></section>
+
+  </body>
 </html>
