corrigindo os tamanhos

--- a/index.html
+++ b/index.html
@@ -34,20 +34,23 @@
         <div class="bloco-esquerdo__empresa-bloco-configuracoes">
           <ul class="bloco-esquerdo__empresa-bloco-configuracoes-lista">
             <li class="bloco-esquerdo__empresa-bloco-configuracoes-item__lista">
-              <a href="" class="bloco-esquerdo__empresa-bloco-configuracoes__link">
+              <a href class="bloco-esquerdo__empresa-bloco-configuracoes__link">
                 <i class='bx bx-cog'></i>
-                <p>configuraçoes</p>
+                <p
+                  class="bloco-esquerdo__empresa-bloco-configuracoes__texto">configuraçoes</p>
 
               </a>
             </li>
-            <li>
-              <a href>
+            <li class="bloco-esquerdo__empresa-bloco-configuracoes-item__lista">
+              <a href class="bloco-esquerdo__empresa-bloco-configuracoes__link">
                 <i class='bx bx-plus-circle'></i>
-                <p>configuraçoes</p>
+                <p
+                  class="bloco-esquerdo__empresa-bloco-configuracoes__texto">Adicionar
+                  outro negocio</p>
 
               </a>
             </li>
-            
+
           </ul>
 
         </div>
