adicionando mais funcionalidades

--- a/index.html
+++ b/index.html
@@ -56,8 +56,48 @@
         </div>
 
       </div>
-      <div></div>
-      <div></div>
+      <div class="bloco-movimentos">
+        <ul class="bloco-movimentos__lista">
+          <li class="bloco-movimentos__item-lista">
+            <a href class="bloco-movimentos__link">
+              <i class='bx bx-shopping-bag'></i>
+              <p class="bloco-movimentos__titulo">Movimentos</p>
+            </a>
+          </li>
+
+          <li class="bloco-movimentos__item-lista">
+            <a href class="bloco-movimentos__link">
+              <i class='bx bx-wallet'></i>
+              <p class="bloco-movimentos__titulo">Produtos</p>
+            </a>
+          </li>
+
+          <li class="bloco-movimentos__item-lista">
+            <a href class="bloco-movimentos__link">
+              <i class='bx bx-face'></i>
+              <p class="bloco-movimentos__titulo">Funcionarios</p>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="bloco-gerenciar">
+        <ul class="bloco-gerenciar__lista">
+          <p class="bloco-gerenciar__titulo">Gerencie Seus Contatos</p>
+          <li class="bloco-gerenciar__item-lista">
+            <a href class="bloco-gerenciar__link">
+              <i class='bx bx-user'></i>
+              <p class="bloco-gerenciar__texto">Clientes</p>
+            </a>
+          </li>
+
+          <li class="bloco-gerenciar__item-lista">
+            <a href class="bloco-gerenciar__link">
+              <i class='bx bx-car'></i>
+              <p class="bloco-gerenciar__texto">Fornecedores</p>
+            </a>
+          </li>
+        </ul>
+      </div>
       <div></div>
       <div></div>
       <div></div>
