--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <a href class="bloco-esquerdo__empresa-bloco-configuracoes__link">
                 <i class='bx bx-cog'></i>
                 <p
-                  class="bloco-esquerdo__empresa-bloco-configuracoes__texto">configuraçoes</p>
+                  class="bloco-esquerdo__empresa-bloco-configuracoes__texto">Configuraçoes</p>
 
               </a>
             </li>
