adicionando mais um bloco

--- a/index.html
+++ b/index.html
@@ -98,7 +98,29 @@
           </li>
         </ul>
       </div>
-      <div></div>
+      <div class="bloco-termos">
+       <ul class="bloco-termos__item">
+         <li class="bloco-termos__item-lista"><a href="" class="bloco-termos__link">
+          <i class='bx bx-book'></i>
+            <p class="bloclo-termos__titulo">Termos e condiçoes</p>
+         </a>
+        </li>
+
+        <li class="bloco-termos__item-lista"><a href="" class="bloco-termos__link">
+          <i class='bx bx-x-circle'></i>
+          <p class="bloclo-termos__titulo">Politica de Privacidade</p>
+       </a>
+      </li>
+
+      <li class="bloco-termos__item-lista"><a href="" class="bloco-termos__link">
+        <i class='bx bx-arrow-from-left'></i>
+        <p class="bloclo-termos__titulo">Sair</p>
+     </a>
+    </li>
+
+
+       </ul>
+      </div>
       <div></div>
       <div></div>
       <div></div>
