adicionando mais modificaçoes

--- a/index.html
+++ b/index.html
@@ -132,12 +132,12 @@
               <p class="cabecalho__btn-titulo">Fechar caixa</p>
             </button>
 
-            <button class="cabecalho__btn">
+            <button class="cabecalho__btn cabecalho__btn--venda">
 
               <p class="cabecalho__btn-titulo">Nova venda</p>
             </button>
 
-            <button class="cabecalho__btn">
+            <button class="cabecalho__btn cabecalho__btn--despesa">
               <p class="cabecalho__btn-titulo">Nova despesa</p>
             </button>
 
