Removendo alguns bugs

--- a/produtos.html
+++ b/produtos.html
@@ -126,7 +126,8 @@
         <div class="cabecalho">
           <div class="container">
             <div class="cabecalho-bloco">
-              <h2 class="cabecalho__titulo">Movimentos</h2>
+              <h2 class="cabecalho__titulo">Inventario
+              </h2>
               <div class="cabecalho__conjunto-botoes">
   
                 <button class="cabecalho__btn cabecalho__btn--fechamento">
@@ -136,11 +137,11 @@
   
                 <button class="cabecalho__btn cabecalho__btn--venda">
   
-                  <p class="cabecalho__btn-titulo">Nova venda</p>
+                  <p class="cabecalho__btn-titulo">Criar categoria</p>
                 </button>
                 
                 <button class="cabecalho__btn cabecalho__btn--despesa">
-                  <p class="cabecalho__btn-titulo">Nova despesa</p>
+                  <p class="cabecalho__btn-titulo">Adcionar produto</p>
                 </button>
   
               </div>
