--- a/produtos.html
+++ b/produtos.html
@@ -135,13 +135,13 @@
                   <p class="cabecalho__btn-titulo">Fechar caixa</p>
                 </button>
   
-                <button class="cabecalho__btn cabecalho__btn--venda">
+                <button class="cabecalho__btn cabecalho__btn--venda btn-branco">
   
-                  <p class="cabecalho__btn-titulo">Criar categoria</p>
+                  <p class="cabecalho__btn-titulo ">Criar categoria</p>
                 </button>
                 
                 <button class="cabecalho__btn cabecalho__btn--despesa">
-                  <p class="cabecalho__btn-titulo">Adcionar produto</p>
+                  <p class="cabecalho__btn-titulo">Adcionar produtos</p>
                 </button>
   
               </div>
