adicionando mais um pouco de codigo

--- a/produtos.html
+++ b/produtos.html
@@ -156,11 +156,16 @@
     <div class="bloco-funtutante-venda">
 
         <h2>Adicionar Produto</h2>
+
+        <input type="file" class="capiturar-produto" accept=".jpg. , .jpeg , .png ">
+
+        <button class="adicionar-produto-btn    ">Adicionar Produto</button>
           
 
     </div>
-
+<script src="script.js"></script>
 </body>
+
 
 
 </html>
