adicionando mais funçoes

--- a/produtos.html
+++ b/produtos.html
@@ -15,10 +15,7 @@
 
 <body>
 
-    <div class="overlay">
-
-
-    </div>
+   
     <section class="bloco-esquerdo">
         <div class="bloco-esquerdo__empresa">
             <div class="bloco-esquerdo__empresa-bloco">
@@ -145,7 +142,7 @@
                             <p class="cabecalho__btn-titulo ">Criar categoria</p>
                         </button>
 
-                        <button class="cabecalho__btn cabecalho__btn--despesa">
+                        <button class="cabecalho__btn cabecalho__btn--despesa" id="cabecalho__btn--despesa-js">
                             <p class="cabecalho__btn-titulo">Adcionar produtos</p>
                         </button>
 
@@ -163,13 +160,15 @@
                 <div class="container-bloco-flutuante">
                     <div class="bloco-funtutante-venda__superior">
                         <h2 class="bloco-funtutante-venda__superior-titulo">Adicionar Produto</h2>
+                        <i class='bx bxs-x-circle'></i>
 
                     </div>
                     <div class="bloco-flutuante-venda__barra-scrrol">
 
 
                         <label for="escolha-arquivo" class="bloco-flutuante-venda__arquivo">
-                            Escolher arquivo
+                            <i class='bx bxs-up-arrow-alt'></i>
+                            Carregar imagem
                             <input type="file" id="escolha-arquivo" class="capiturar-produto"
                                 accept=".jpg. , .jpeg , .png ">
 
@@ -179,6 +178,12 @@
                     </div>
 
                 </div>
+
+            </div>
+
+
+            <div class="overlay" >
+
 
             </div>
 
