adicionando mais recursos

--- a/produtos.html
+++ b/produtos.html
@@ -14,6 +14,11 @@
 </head>
 
 <body>
+    <div class="overlay" >
+
+
+    </div>
+
 
    
     <section class="bloco-esquerdo">
@@ -160,14 +165,14 @@
                 <div class="container-bloco-flutuante">
                     <div class="bloco-funtutante-venda__superior">
                         <h2 class="bloco-funtutante-venda__superior-titulo">Adicionar Produto</h2>
-                        <i class='bx bxs-x-circle'></i>
+                        <i class='bx bxs-x-circle botao-fechar-js'></i>
 
                     </div>
                     <div class="bloco-flutuante-venda__barra-scrrol">
 
 
                         <label for="escolha-arquivo" class="bloco-flutuante-venda__arquivo">
-                            <i class='bx bxs-up-arrow-alt'></i>
+                            <i class='bx bxs-up-arrow-alt '></i>
                             Carregar imagem
                             <input type="file" id="escolha-arquivo" class="capiturar-produto"
                                 accept=".jpg. , .jpeg , .png ">
@@ -182,11 +187,7 @@
             </div>
 
 
-            <div class="overlay" >
-
-
-            </div>
-
+       
 
 
 
