adicionando mais recursos novamente

--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
       <div class="bloco-movimentos">
         <ul class="bloco-movimentos__lista">
           <li class="bloco-movimentos__item-lista">
-            <a href class="bloco-movimentos__link">
+            <a href="./index.html" class="bloco-movimentos__link">
               <i class='bx bx-shopping-bag'></i>
               <p class="bloco-movimentos__titulo">Movimentos</p>
             </a>
           </li>
 
           <li class="bloco-movimentos__item-lista">
-            <a href class="bloco-movimentos__link">
+            <a href="./produtos.html" class="bloco-movimentos__link">
               <i class='bx bx-wallet'></i>
               <p class="bloco-movimentos__titulo">Produtos</p>
             </a>
