--- a/produtos.html
+++ b/produtos.html
@@ -65,7 +65,7 @@
         <div class="bloco-movimentos">
             <ul class="bloco-movimentos__lista">
                 <li class="bloco-movimentos__item-lista">
-                    <a href class="bloco-movimentos__link">
+                    <a href="./index.html" class="bloco-movimentos__link">
                         <i class='bx bx-shopping-bag'></i>
                         <p class="bloco-movimentos__titulo">Movimentos</p>
                     </a>
