adicionando mais funcionalidades

--- a/produtos.html
+++ b/produtos.html
@@ -160,7 +160,7 @@
         <div class="conteudo-principal">
 
 
-            <div class="bloco-funtutante-venda  ">
+            <div class="bloco-funtutante-venda">
 
                 <div class="container-bloco-flutuante">
                     <div class="bloco-funtutante-venda__superior">
@@ -179,6 +179,16 @@
 
                         </label>
 
+                        <p class="container-bloco-flutuante__titulo-imagem">Recomendamos que a imagem tenha tamanho de 500 x 500 px no formato PNG e pese no máximo 2MB.</p>
+
+                        <section class="bloco-flutuante-venda__arquivo-info">
+                          <p class="bloco-flutuante-venda__nome-produto">Nome do produto*</p>
+                          <p class="bloco-flutuante-venda__lembrete">Lembre-se, isso deve ser único em seu inventário</p>
+                          <input type="text" class="bloco-flutuante-venda__produto-input" placeholder="Escreva o nome do produto">
+                          <p class="bloco-flutuante-venda__mensagem-erro">Este campo é obrigatório</p>
+                        </section>
+
+                        <input type="text" class="estilos__input">
 
                     </div>
 
