adicionando mais recursos

--- a/produtos.html
+++ b/produtos.html
@@ -188,7 +188,11 @@
                           <p class="bloco-flutuante-venda__mensagem-erro">Este campo é obrigatório</p>
                         </section>
 
-                        <input type="text" class="estilos__input">
+                        <section class="bloco-flutuante-venda__codigo-barras">
+                            <p class="bloco-flutuante-venda__codigo-barras__titulo">Codigo de Barras</p>
+                            <p class="bloco-flutuante-venda__codigo-barras__subtitulo">Escreva ou digitalize</p>
+                            <input type="text" class="bloco-flutuante-venda__codigo-barras__input estilos__input" placeholder="0000000000000">                        
+                          </section>
 
                     </div>
 
