--- a/produtos.html
+++ b/produtos.html
@@ -191,7 +191,10 @@
                         <section class="bloco-flutuante-venda__codigo-barras">
                             <p class="bloco-flutuante-venda__codigo-barras__titulo">Codigo de Barras</p>
                             <p class="bloco-flutuante-venda__codigo-barras__subtitulo">Escreva ou digitalize</p>
-                            <input type="text" class="bloco-flutuante-venda__codigo-barras__input estilos__input" placeholder="0000000000000">                        
+                           <div class="bloco-flutuante-venda__input-bloco">
+                            <input type="text" class="bloco-flutuante-venda__codigo-barras__input estilos__input" placeholder="0000000000000"> 
+                            <i class='bx bx-barcode-reader' ></i>
+                           </div>                       
                           </section>
 
                     </div>
