adicionando mais modificaçoes

--- a/produtos.html
+++ b/produtos.html
@@ -199,6 +199,10 @@
 
                     </div>
 
+                    <button class="bloco-flutuante-venda__botao-adicionar">
+                        <p class="bloco-flutuante-venda__botao-texto">Criar produto</p>
+                    </button>
+
                 </div>
 
             </div>
