adicionando mais recursos

--- a/produtos.html
+++ b/produtos.html
@@ -197,6 +197,18 @@
                            </div>                       
                           </section>
 
+                          <section class="bloco-flutuante-venda__codigo-barras">
+                            <p class="bloco-flutuante-venda__codigo-barras__titulo">Quantidade disponivel</p>
+                            <p class="bloco-flutuante-venda__codigo-barras__subtitulo">Escreva ou digitalize</p>
+                           <div class="bloco-flutuante-venda__input-bloco">
+                            <input type="text" class="bloco-flutuante-venda__codigo-barras__input estilos__input" placeholder="0000000000000"> 
+                            <i class='bx bx-barcode-reader' ></i>
+                           </div>                       
+                          </section>
+                       
+
+                          
+
                     </div>
 
                     <button class="bloco-flutuante-venda__botao-adicionar">
