adicionando a funcionalidade quantidade de produtos

--- a/produtos.html
+++ b/produtos.html
@@ -233,7 +233,7 @@
                     class="bloco-flutuante-venda__input-bloco bloco-flutuante-venda__input-bloco--quantidade">
                     <i class='bx bx-minus-circle icone-menos-js' ></i>
                     <input type="text"
-                      class="bloco-flutuante-venda__quantidade__input quantidade__input-js ">
+                      class="bloco-flutuante-venda__quantidade__input quantidade__input-js " value="0">
                     <i class='bx bx-plus-circle icone-mais-js'></i>
                   </div>
                 </section>
