adicionando recursos e mais metodos

--- a/produtos.html
+++ b/produtos.html
@@ -247,9 +247,10 @@
                     que você paga ao fornecedor
                     pelo produto</p>
                   <div class="bloco-flutuante-venda__input-bloco">
+                
                     <input type="text"
                       class="bloco-flutuante-venda__custo__input estilos__input"
-                      placeholder value="R$ 0">
+                      placeholder="R$">
 
                   </div>
                 </section>
