adicionando mais recursos no btn adicionar produto

--- a/produtos.html
+++ b/produtos.html
@@ -330,7 +330,7 @@
 
       <script src="script.js"></script>
       <script src="teste.js"></script>
-      <script src="overlay.js"></script>
+      <script type="module" src="overlay.js"></script>
       <script src="btnAdicionar.js"></script>
 
     </body>
