terminando o painel de referencias

--- a/produtos.html
+++ b/produtos.html
@@ -197,16 +197,21 @@
           </div>
 
           <div class="pesquisa-produto-categorias">
+
             <div class="pesquisa-produto-categorias__inventario-bloco">
               <i class='bx bx-wallet'></i>
-              <p class="pesquisa-produto-categorias__titulo">Total de Referencias</p> 
-
+              <div class="pesquisa-produto-categorias-bloco">
+                <p class="pesquisa-produto-categorias__referencias-titulo">Total de Referencias</p> 
+                <span class="pesquisa-produto-categorias__referencias-valor">0</span>
+              </div>
             </div>
 
             <div class="pesquisa-produto-categorias__inventario-bloco">
-              <i class='bx bx-wallet'></i>
-              <p class="pesquisa-produto-categorias__titulo">Custo total do inventario</p> 
-
+              <i class='bx bx-money' ></i>
+              <div class="pesquisa-produto-categorias-bloco">
+                <p class="pesquisa-produto-categorias__referencias-titulo">Custo total do produto</p> 
+                <span class="pesquisa-produto-categorias__referencias-valor">0</span>
+              </div>
             </div>
           </div>
 
