começando o layout dos produtos

--- a/produtos.html
+++ b/produtos.html
@@ -215,6 +215,11 @@
             </div>
           </div>
 
+          <div class="pesquisa-produto-produto">
+            
+
+          </div>
+
           
         </div>
 
