finalizado o bloco produtos

--- a/produtos.html
+++ b/produtos.html
@@ -216,11 +216,17 @@
           </div>
 
           <div class="pesquisa-produto-produto">
-            
-
+            <ul class="pesquisa-produto-produto__lista">
+              <li class="pesquisa-produto-produto__item-lista">
+                 <a href="" class="pesquisa-produto-produto__link">
+                   <img src="./imagens/wiskey.jpg" alt="" class="pesquisa-produto-produto__imagem">
+                   <h3 class="pesquisa-produto-produto__preco">R$ 50,00</h3>
+                   <p class="pesquisa-produto-produto__nome">Wiskey</p>
+                   <p class="pesquisa-produto-produto__quantidade">8 disponiveis</p>
+                 </a>
+              </li>
+            </ul>
           </div>
-
-          
         </div>
 
       </div>
