finlizando o acabamento dos produtos

--- a/produtos.html
+++ b/produtos.html
@@ -22,7 +22,7 @@
 
     <section class="bloco-esquerdo">
       <div class="bloco-esquerdo__empresa">
-        <div class="bloco-esquerdo__empresa-bloco">
+        <div class="bloco-esquerdo__empresa-bloco"> 
           <div class="info-propietario">
             <section class="bloco-esquerdo__empresa-logo__propietario">
               <img src alt class="imagem-empresa">
@@ -163,7 +163,7 @@
 
       </div>
 
-      <div class="conteudo-principal">
+      <div class="conteudo-principal container">
 
         <div class="pesquisa-produto">
 
@@ -251,9 +251,6 @@
                 <input type="file" id="escolha-arquivo" accept="image/*"
                   class="capiturar-produto"
                   accept=".jpg. , .jpeg , .png ">
-
-                
-  
               </label>
               <div class="bloco-flutuante-venda__bloco-imagem">
                 <img src="" alt="" class="bloco-flutuante-venda__imagem-imagem" id="imagem-arquivo">
