corrigindo alguns bugs

--- a/produtos.html
+++ b/produtos.html
@@ -163,9 +163,10 @@
 
       </div>
 
-      <div class="conteudo-principal container">
+      <div class="conteudo-principal ">
 
-        <div class="pesquisa-produto">
+      <div class="container">
+        <div class="pesquisa-produto" >
 
           <div class="pesquisa-produto__bloco-container">
             <section class="pesquisa-produto__bloco">
@@ -229,6 +230,7 @@
           </div>
         </div>
 
+      </div>
       </div>
 
       <!-- BLOCO FKUTUANTE -->
