começando a validar os dados do produto

--- a/produtos.html
+++ b/produtos.html
@@ -274,8 +274,7 @@
                 <input type="text"
                   class="bloco-flutuante-venda__produto-input estilos__input"
                   placeholder="Escreva o nome do produto">
-                <p class="bloco-flutuante-venda__mensagem-erro">Este campo é
-                  obrigatório</p>
+                <p class="bloco-flutuante-venda__mensagem-erro"></p>
               </section>
   
               <section class="bloco-flutuante-venda__codigo-barras">
