aplicando a função de zerar os valores dos produtos

--- a/produtos.html
+++ b/produtos.html
@@ -298,7 +298,7 @@
                   pelo produto</p>
                 <div class="bloco-flutuante-venda__input-bloco">
 
-                  <input type="text" class="bloco-flutuante-venda__custo__input estilos__input" placeholder="R$">
+                  <input type="text" class="bloco-flutuante-venda__custo__input estilos__input" placeholder="R$ 0.00">
 
                 </div>
               </section>
@@ -308,7 +308,7 @@
                 <p class="bloco-flutuante-venda__preco__subtitulo subtitulo-input">Valor
                   que voce ira vender</p>
                 <div class="bloco-flutuante-venda__input-bloco">
-                  <input type="text" class="bloco-flutuante-venda__preco__input estilos__input" value="R$ 0">
+                  <input type="text" class="bloco-flutuante-venda__preco__input estilos__input" placeholder="R$ 0.00">
 
                 </div>
               </section>
