corrigindo alguns bugs na a tela principal

--- a/produtos.html
+++ b/produtos.html
@@ -336,10 +336,10 @@
 
     </div>
 
-    <script src="script.js"></script>
-    <script src="teste.js"></script>
-    <script type="module" src="overlay.js"></script>
-    <script src="btnAdicionar.js"></script>
+   
+  
+    <script type="module" src="./js/overlay.js"></script>
+   
 
 </body>
 
