criando um algoritmo novo

--- a/produtos.html
+++ b/produtos.html
@@ -195,7 +195,7 @@
               <i class='bx bx-wallet'></i>
               <div class="pesquisa-produto-categorias-bloco">
                 <p class="pesquisa-produto-categorias__referencias-titulo">Total de Referencias</p>
-                <span class="pesquisa-produto-categorias__referencias-valor">0</span>
+                <span class="pesquisa-produto-categorias__referencias-valor total-referencias">0</span>
               </div>
             </div>
 
@@ -203,7 +203,7 @@
               <i class='bx bx-money'></i>
               <div class="pesquisa-produto-categorias-bloco">
                 <p class="pesquisa-produto-categorias__referencias-titulo">Custo total do produto</p>
-                <span class="pesquisa-produto-categorias__referencias-valor">0</span>
+                <span class="pesquisa-produto-categorias__referencias-valor total-custo">0</span>
               </div>
             </div>
           </div>
