--- a/produtos.html
+++ b/produtos.html
@@ -155,40 +155,7 @@
                 <p class="cabecalho__btn-titulo">Adcionar produtos</p>
               </button>
 
-<<<<<<< HEAD
             </div>
-=======
-            </section>
-            <section class="pesquisa-produto__inventario">
-
-
-
-            </section>
-          </div>
-
-          <div class="pesquisa-produto-categorias">
-
-            <div class="pesquisa-produto-categorias__inventario-bloco">
-              <i class='bx bx-wallet'></i>
-              <div class="pesquisa-produto-categorias-bloco">
-                <p class="pesquisa-produto-categorias__referencias-titulo">Total de Referencias</p>
-                <span class="pesquisa-produto-categorias__referencias-valor total-referencias">0</span>
-              </div>
-            </div>
-
-            <div class="pesquisa-produto-categorias__inventario-bloco">
-              <i class='bx bx-money'></i>
-              <div class="pesquisa-produto-categorias-bloco">
-                <p class="pesquisa-produto-categorias__referencias-titulo">Custo total do produto</p>
-                <span class="pesquisa-produto-categorias__referencias-valor total-custo">0</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="pesquisa-produto-produto">
-            <ul class="pesquisa-produto-produto__lista">
-            </ul>
->>>>>>> aeaa341748fd76bd8dff52ccea5c1354224cb0d5
           </div>
         </div>
 
@@ -257,7 +224,7 @@
                       <img class="pesquisa-produto-produto__imagem"
                         src="http://127.0.0.1:5500/produtos.html">
                       <h3 class="pesquisa-produto-produto__preco">R$ </h3>
-                      <p class="pesquisa-produto-produto__custo"></p>
+                      <p style="display: none;" class="pesquisa-produto-produto__custo"></p>
                       <p class="pesquisa-produto-produto__nome">
                       </p>
                       <p class="pesquisa-produto-produto__quantidade">0
