corrigindo o erro do custo do produto na tela do ususario

--- a/produtos.html
+++ b/produtos.html
@@ -212,25 +212,14 @@
                       class="pesquisa-produto-categorias__referencias-titulo">Custo
                       total do produto</p>
                     <span
-                      class="pesquisa-produto-categorias__referencias-valor">0</span>
+                      class="pesquisa-produto-categorias__referencias-valor  js-custo-produto">0</span>
                   </div>
                 </div>
               </div>
 
               <div class="pesquisa-produto-produto">
                 <ul class="pesquisa-produto-produto__lista">
-                  <li class="pesquisa-produto-produto__item-lista">
-                    <a class="pesquisa-produto-produto__link" href="#">
-                      <img class="pesquisa-produto-produto__imagem"
-                        src="http://127.0.0.1:5500/produtos.html">
-                      <h3 class="pesquisa-produto-produto__preco">R$ </h3>
-                      <p style="display: none;" class="pesquisa-produto-produto__custo"></p>
-                      <p class="pesquisa-produto-produto__nome">
-                      </p>
-                      <p class="pesquisa-produto-produto__quantidade">0
-                        disponiveis</p>
-                    </a>
-                  </li>
+                 
                 </ul>
               </div>
             </div>
