corrigindo o bug do preço

--- a/produtos.html
+++ b/produtos.html
@@ -212,7 +212,7 @@
                       class="pesquisa-produto-categorias__referencias-titulo">Custo
                       total do produto</p>
                     <span
-                      class="pesquisa-produto-categorias__referencias-valor  js-custo-produto">0</span>
+                      class="pesquisa-produto-categorias__referencias-valor" id="js-custo-produto">0</span>
                   </div>
                 </div>
               </div>
