criando a função de validação dos dados de entrada

--- a/produtos.html
+++ b/produtos.html
@@ -227,7 +227,7 @@
           </div>
         </div>
 
-        <!-- BLOCO FKUTUANTE -->
+        <!-- BLOCO FlUTUANTE -->
         <div class="bloco-funtutante-venda">
 
           <div class="container-bloco-flutuante">
@@ -255,6 +255,8 @@
                       id="imagem-arquivo">
 
                   </div>
+
+                  <p class="bloco-flutuante-venda__mensagem-erro-imagem">Selecione a imagem</p>
                   <p
                     class="container-bloco-flutuante__titulo-imagem">Recomendamos
                     que a imagem tenha tamanho
