constinuando na validação dos dados

--- a/produtos.html
+++ b/produtos.html
@@ -288,11 +288,13 @@
                       digitalize</p>
                     <div
                       class="bloco-flutuante-venda__input-bloco bloco-flutuante-venda__input-bloco--codigo-barras">
-                      <input type="number"
+                      <input type="text"
                         class="bloco-flutuante-venda__codigo-barras__input "
                         placeholder="0000000000000">
                       <i class='bx bx-barcode-reader'></i>
                     </div>
+
+                    <p class="bloco-flutuante-venda__mensagem-erro-codigo-barras"></p>
                   </section>
 
                   <section class="bloco-flutuante-venda__quantidade">
