continuando a codar a função criarDadosProduto

--- a/produtos.html
+++ b/produtos.html
@@ -310,6 +310,9 @@
                         value="0">
                       <i class='bx bx-plus-circle icone-mais-js'></i>
                     </div>
+
+                    <p class="bloco-flutuante-venda__mensagem-erro-quantidade"></p>
+
                   </section>
 
                   <section class="bloco-flutuante-venda__custo">
