criando a função buscar produtos

--- a/produtos.html
+++ b/produtos.html
@@ -229,6 +229,33 @@
                       class="pesquisa-produto-produto__quantidade">4
                       disponiveis</p></a></li>
 
+                      <li class="pesquisa-produto-produto__item-lista"><a
+                        class="pesquisa-produto-produto__link" href="#"><img
+                          class="pesquisa-produto-produto__imagem" src="./imagens/wiskey.jpg"
+                          class="pesquisa-produto-produto__preco">R$&nbsp;0,00</h3><p
+                        class="pesquisa-produto-produto__custo">R$&nbsp;0,00</p><p
+                        class="pesquisa-produto-produto__nome">Blusas</p><p
+                        class="pesquisa-produto-produto__quantidade">4
+                        disponiveis</p></a></li>
+
+                        <li class="pesquisa-produto-produto__item-lista"><a
+                          class="pesquisa-produto-produto__link" href="#"><img
+                            class="pesquisa-produto-produto__imagem" src="./imagens/wiskey.jpg"
+                            class="pesquisa-produto-produto__preco">R$&nbsp;0,00</h3><p
+                          class="pesquisa-produto-produto__custo">R$&nbsp;0,00</p><p
+                          class="pesquisa-produto-produto__nome">Detergente</p><p
+                          class="pesquisa-produto-produto__quantidade">4
+                          disponiveis</p></a></li>
+
+                          <li class="pesquisa-produto-produto__item-lista"><a
+                            class="pesquisa-produto-produto__link" href="#"><img
+                              class="pesquisa-produto-produto__imagem" src="./imagens/wiskey.jpg"
+                              class="pesquisa-produto-produto__preco">R$&nbsp;0,00</h3><p
+                            class="pesquisa-produto-produto__custo">R$&nbsp;0,00</p><p
+                            class="pesquisa-produto-produto__nome">Sapatos</p><p
+                            class="pesquisa-produto-produto__quantidade">4
+                            disponiveis</p></a></li>
+                       
               </ul>
             </div>
           </div>
