--- a/produtos.html
+++ b/produtos.html
@@ -217,7 +217,7 @@
                 </a></li>
 
               <li class="pesquisa-produto-produto__item-lista"><a class="pesquisa-produto-produto__link" href="#"><img
-                    class="pesquisa-produto-produto__imagem" src="./imagens/wiskey.jpg"
+                    class="pesquisa-produto-produto__imagem" src="./imagens/blusa.jpg"
                     class="pesquisa-produto-produto__preco">R$&nbsp;0,00</h3>
                   <p class="pesquisa-produto-produto__custo">R$&nbsp;0,00</p>
                   <p class="pesquisa-produto-produto__nome">Blusas</p>
@@ -226,7 +226,7 @@
                 </a></li>
 
               <li class="pesquisa-produto-produto__item-lista"><a class="pesquisa-produto-produto__link" href="#"><img
-                    class="pesquisa-produto-produto__imagem" src="./imagens/wiskey.jpg"
+                    class="pesquisa-produto-produto__imagem" src="./imagens/detergente.jpg"
                     class="pesquisa-produto-produto__preco">R$&nbsp;0,00</h3>
                   <p class="pesquisa-produto-produto__custo">R$&nbsp;0,00</p>
                   <p class="pesquisa-produto-produto__nome">Detergente</p>
