--- a/produtos.html
+++ b/produtos.html
@@ -211,7 +211,7 @@
                     class="pesquisa-produto-produto__imagem" src="./imagens/wiskey.jpg"
                     class="pesquisa-produto-produto__preco">R$&nbsp;0,00</h3>
                   <p class="pesquisa-produto-produto__custo">R$&nbsp;0,00</p>
-                  <p class="pesquisa-produto-produto__nome">Wiskey</p>
+                  <p class="pesquisa-produto-produto__nome">Whiskey</p>
                   <p class="pesquisa-produto-produto__quantidade">4
                     disponiveis</p>
                 </a></li>
