--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
 
       <div class="conteudo-principal">
 
+       <div class="container">
         <section class="conteudo-principal__conjunto-btn">
 
           <button class="conteudo-principal__conjunto-btn-btn">
@@ -173,6 +174,7 @@
         </section>
 
       </div>
+       </div>
     </section>
 
     <div class="bloco-funtutante-venda">
