--- a/produtos.html
+++ b/produtos.html
@@ -207,51 +207,45 @@
           <div class="pesquisa-produto-produto">
             <ul class="pesquisa-produto-produto__lista">
 
-              <li class="pesquisa-produto-produto__item-lista"><a class="pesquisa-produto-produto__link" href="#"><img
-                    class="pesquisa-produto-produto__imagem" src="./imagens/wiskey.jpg"
-                    class="pesquisa-produto-produto__preco">R$&nbsp;0,00</h3>
+              <li class="pesquisa-produto-produto__item-lista">
+                <a class="pesquisa-produto-produto__link" href="#">
+                  <img class="pesquisa-produto-produto__imagem" src="imagens/ovo-pascoa.jpg">
+                  <h3 class="pesquisa-produto-produto__preco">R$&nbsp;0,00</h3>
                   <p class="pesquisa-produto-produto__custo">R$&nbsp;0,00</p>
-                  <p class="pesquisa-produto-produto__nome">Whiskey</p>
-                  <p class="pesquisa-produto-produto__quantidade">4
-                    disponiveis</p>
-                </a></li>
+                  <p class="pesquisa-produto-produto__nome">Ovo de Pascoa</p>
+                  <p class="pesquisa-produto-produto__quantidade">3 disponiveis</p>
+                </a>
+              </li>
 
-              <li class="pesquisa-produto-produto__item-lista"><a class="pesquisa-produto-produto__link" href="#"><img
-                    class="pesquisa-produto-produto__imagem" src="./imagens/blusa.jpg"
-                    class="pesquisa-produto-produto__preco">R$&nbsp;0,00</h3>
-                  <p class="pesquisa-produto-produto__custo">R$&nbsp;0,00</p>
-                  <p class="pesquisa-produto-produto__nome">Blusas</p>
-                  <p class="pesquisa-produto-produto__quantidade">4
-                    disponiveis</p>
-                </a></li>
-
-              <li class="pesquisa-produto-produto__item-lista"><a class="pesquisa-produto-produto__link" href="#"><img
-                    class="pesquisa-produto-produto__imagem" src="./imagens/detergente.jpg"
-                    class="pesquisa-produto-produto__preco">R$&nbsp;0,00</h3>
+              <li class="pesquisa-produto-produto__item-lista">
+                <a class="pesquisa-produto-produto__link" href="#">
+                  <img class="pesquisa-produto-produto__imagem" src="imagens/detergente.jpg">
+                  <h3 class="pesquisa-produto-produto__preco">R$&nbsp;0,00</h3>
                   <p class="pesquisa-produto-produto__custo">R$&nbsp;0,00</p>
                   <p class="pesquisa-produto-produto__nome">Detergente</p>
-                  <p class="pesquisa-produto-produto__quantidade">4
-                    disponiveis</p>
-                </a></li>
+                  <p class="pesquisa-produto-produto__quantidade">3 disponiveis</p>
+                </a>
+              </li>
 
-              <li class="pesquisa-produto-produto__item-lista"><a class="pesquisa-produto-produto__link" href="#"><img
-                    class="pesquisa-produto-produto__imagem" src="./imagens/wiskey.jpg"
-                    class="pesquisa-produto-produto__preco">R$&nbsp;0,00</h3>
+              <li class="pesquisa-produto-produto__item-lista">
+                <a class="pesquisa-produto-produto__link" href="#">
+                  <img class="pesquisa-produto-produto__imagem" src="imagens/wiskey.jpg">
+                  <h3 class="pesquisa-produto-produto__preco">R$&nbsp;0,00</h3>
                   <p class="pesquisa-produto-produto__custo">R$&nbsp;0,00</p>
-                  <p class="pesquisa-produto-produto__nome">Sapatos</p>
-                  <p class="pesquisa-produto-produto__quantidade">4
-                    disponiveis</p>
-                </a></li>
+                  <p class="pesquisa-produto-produto__nome">Whiskey</p>
+                  <p class="pesquisa-produto-produto__quantidade">3 disponiveis</p>
+                </a>
+              </li>
 
-              <li class="pesquisa-produto-produto__item-lista"><a class="pesquisa-produto-produto__link" href="#"><img
-                    class="pesquisa-produto-produto__imagem" src="./imagens/ovo-pascoa.jpg"
-                    class="pesquisa-produto-produto__preco">R$&nbsp;200,00</h3>
+              <li class="pesquisa-produto-produto__item-lista">
+                <a class="pesquisa-produto-produto__link" href="#">
+                  <img class="pesquisa-produto-produto__imagem" src="imagens/blusa.jpg">
+                  <h3 class="pesquisa-produto-produto__preco">R$&nbsp;0,00</h3>
                   <p class="pesquisa-produto-produto__custo">R$&nbsp;0,00</p>
-                  <p class="pesquisa-produto-produto__nome">Ovo Pascoa</p>
-                  <p class="pesquisa-produto-produto__quantidade">4
-                    disponiveis</p> 
-                </a></li>
-
+                  <p class="pesquisa-produto-produto__nome">Blusa</p>
+                  <p class="pesquisa-produto-produto__quantidade">3 disponiveis</p>
+                </a>
+              </li> 
 
             </ul>
           </div>
