--- a/produtos.html
+++ b/produtos.html
@@ -245,7 +245,7 @@
                   <p class="pesquisa-produto-produto__nome">Blusa</p>
                   <p class="pesquisa-produto-produto__quantidade">3 disponiveis</p>
                 </a>
-              </li> 
+              </li>
 
             </ul>
           </div>
@@ -373,10 +373,9 @@
     </div>
 
     <script type="module" src="./js/overlay.js"></script>
-
     <script src="./js/teste.js"></script>
-
-    <script src="./js/ManipuladorDOM.js"></script>
+    <!-- <script src="./js/ManipuladorDOM.js"></script> -->
+    <script src="./js/GeradorProdutoInterface.js"></script>
 
 </body>
 
