--- a/produtos.html
+++ b/produtos.html
@@ -4,10 +4,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- GOOGLE FONTS -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+    rel="stylesheet">
+    <!-- BOX ICONS -->
   <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <!-- RESET -->
   <link rel="stylesheet" href="./css/reset.css">
+  <!-- ESTILOS -->
   <link rel="stylesheet" href="./css/estilios.css">
+  <!-- ESTILOS PAGINA ATUAL -->
   <link rel="stylesheet" href="./css/produtos.css">
+
   <title>Produtos</title>
 
 </head>
