implementando a classe principal

--- a/produtos.html
+++ b/produtos.html
@@ -383,10 +383,11 @@
 
     </div>
 
-    <script type="module" src="./js/overlay.js"></script>
-    <script src="./js/teste.js"></script>
+    <!-- <script type="module" src="./js/overlay.js"></script> -->
+    <!-- <script src="./js/teste.js"></script> -->
     <!-- <script src="./js/ManipuladorDOM.js"></script> -->
-    <script src="./js/GeradorProdutoInterface.js"></script>
+    <!-- <script src="./js/GeradorProdutoInterface.js"></script> -->
+    <script src="./js/ClassePrincipal.js" type="module"></script>
 
 </body>
 
