ajustando o bloco de carregar imagem

--- a/produtos.html
+++ b/produtos.html
@@ -294,10 +294,15 @@
                   <div class="bloco-flutuante-venda__bloco-imagem-subbloco">
                     <ul class="bloco-flutuante-venda__bloco-imagem-subbloco-lista">
                       <li class="bloco-flutuante-venda__bloco-imagem-subbloco-item-lista">
-                        <div class="bloco-flutuante-venda__bloco-imagem-subbloco-item-lista-bloco">
-                          <i class='bx bx-landscape bloco-flutuante-venda__bloco-imagem-subbloco-icone'></i>
-                          <p class="bloco-flutuante-venda__bloco-imagem-subbloco-texto">Carregar Imagem</p>
-                        </div>
+                       
+                          <label for="bloco-flutuante-venda__bloco-imagem-subbloco-texto__file-img" class="bloco-flutuante-venda__bloco-imagem-subbloco-item-lista-bloco">
+                            <i class='bx bx-landscape bloco-flutuante-venda__bloco-imagem-subbloco-icone'></i>
+                            <p class="bloco-flutuante-venda__bloco-imagem-subbloco-texto">Carregar Imagem
+                              <input type="file" 
+                                id="bloco-flutuante-venda__bloco-imagem-subbloco-texto__file-img">
+                          </label>
+                          </p>
+                       
                       </li>
                       <li class="bloco-flutuante-venda__bloco-imagem-subbloco-item-lista">
                         <div class="bloco-flutuante-venda__bloco-imagem-subbloco-item-lista-bloco">
